# actsense

./: .coverage  .gitignore  AGENT.md  AGENTS.md  CONTRIBUTING.md  Dockerfile  INDEX.md  Justfile  README.md  docker-compose.yml  docker-entrypoint.sh  setup.sh  start-backend.sh  start-frontend.sh  start-integrated.sh  start.sh  test_accordion.html
.github/: SECURITY.md
.github/workflows/: build.yml  ci.yml  cleanup-checkout.yml  docker-release.yml  release.yml  security.yml
backend/: .coverage  .flake8  analysis_storage.py  config.yaml  config_loader.py  coverage.xml  github_client.py  graph_builder.py  main.py  pyproject.toml  repo_cloner.py  requirements.txt  run_tests.sh  security_auditor.py  workflow_parser.py
backend/rules/: __init__.py  best_practices.py  security.py
backend/tests/: README.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  __init__.py  conftest.py  test_analysis_storage.py  test_best_practices.py  test_config_loader.py  test_container_images.py  test_github_client.py  test_graph_builder.py  test_main.py  test_repo_cloner.py  test_security_auditor.py  test_security_auditor_coverage.py  test_security_auditor_edge_cases.py  test_security_auditor_final_coverage.py  test_security_auditor_final_lines.py  test_security_auditor_methods.py  test_security_rules.py  test_workflow_parser.py
docs/: go.mod  hugo.yaml
docs/content/: _index.md  api-reference.md  contributors.md  getting-started.md  installation.md  usage.md
docs/static/: openapi.json  tilt-effect.js
frontend/: index.html  package-lock.json  package.json
scripts/: generate_api_docs.py
(+154 files in other folders)
