[project]
name = "actsense-backend"
version = "0.1.0"
description = "Backend for actsense - GitHub Actions Security Auditor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "flake8>=6.0.0",
]

